--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-logo: /assets/img/headshot2.png
-title: K. Colin Li (he/him)
-description: PhD Student | Mixed-Methods Researcher
-show_downloads: false
+title: Lam Yee Ling Rainbow
+description: Undergraduate student in Psychology
 theme: jekyll-theme-minimal
